add: 약속 삭제, 삭제된 약속 불러오기
